tests/backend/checkmach/fail5.output
File "fail5.ml", line 2, characters 5-15:
Error (warning 197 [check-failed]): Annotation check for zero_alloc failed on function Fail5.test (camlFail5__test_HIDE_STAMP)
